--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="span9">
 					<p class="welcome">
             <p>Я прошла целый путь в разработке от junior-разработчика до технического руководителя. Умею видеть ситуацию как со стороны исполнителя, так и со стороны бизнеса.</p>
-            <p>Осознаю, чем отличается небольшой сайт-визитка от высоконагруженного веб-приложения с разбивкой на модули, более-менее сложной архитектурой, взаимодействием с сервером.</p>
+            <p>Осознаю, чем отличается небольшой сайт-визитка от высоко нагруженного веб-приложения с разбивкой на модули, более-менее сложной архитектурой, взаимодействием с сервером.</p>
             <p>Имею опыт в бекенд-разработке и понимаю, как сложный бекенд работает с фронтенд частью. Целый семестр преподавала детям высшую математику в колледже, я могу найти подход к любой команде.</p>
             <p>Работала в стартапе, знаю как делать быстро, круто и умею пресекать перфекционизм.</p>
           <br>
@@ -123,6 +123,8 @@
            <br />
            <h3>А3</h3>
            <h4>Российская платежная система</h4>
+           <h4>Разработчик</h4>
+
            <h5>Март 2018 - Июнь 2018</h5>
            <h5>Функции:</h5>
            <p>- рефакторинг проекта с использованием фреймворка React;</p>
@@ -135,6 +137,8 @@
            <br />
            <h3>GP-analytics</h3>
            <h4>Логистическое решение для пивоварен в США</h4>
+           <h4>Разработчик</h4>
+
            <h5>Июнь 2017 - Март 2018</h5>
            <h5>Функции:</h5>
            <p>- переработка архитектуры проекта с использованием фреймворка Ember.js;</p>
@@ -144,14 +148,15 @@
 
            <h5>Достижения:</h5>
            <p>- количество американских компаний-подписчиков увеличилось с 4 до 16;</p>
-           <p>- реализация и ввод в работу модуля предсказаний сезонных поставок пива позволил сократить количесво персонала, который этим занимался;</p>
+           <p>- реализация и ввод в работу модуля предсказаний сезонных поставок пива позволил сократить количество персонала, который этим занимался;</p>
            <br />
 
           <h3>Simple Shop Scraper</h3>
           <h4>Агрегатор цен для Беларуси</h4>
+          <h4>Разработчик</h4>ы
           <h5>Июнь 2017 - Июль 2017</h5>
           <h5>Функции:</h5>
-          <p>- разработка бекенд архитектуры для парсинга основных популярных белоруских сайтов, разработка фронтенд части;</p>
+          <p>- разработка бекенд архитектуры для парсинга основных популярных белорусских сайтов, разработка фронтенд части;</p>
           <p>- подготовка документации, презентация проекта для инвесторов;</p>
           <p>- запуск фронтенд части на React;</p>
           <h5>Достижения:</h5>
@@ -159,13 +164,13 @@
           <br />
 
           <h3>Cyber academy</h3>
-          <h5>Февраль 2017 - Август 2017</h5>
-
           <p>Oнлайн-платформа для обучения игре в CS:GO, Dota2 и League of legends</p>
+          <h4>Разработчик</h4>
+          <h5>Февраль 2017 - Август 2017</h5>
           <h5>Функции:</h5>
-          <p>- oрганизация взаимодействия команды разработки, контроль результата;</p>
+          <p>- организация взаимодействия команды разработки, контроль результата;</p>
           <p>- проектирование архитектуры проекта, разработка приложения;</p>
-          <p>- написание модулей и компонентов на Reac;t</p>
+          <p>- написание модулей и компонентов на React;</p>
           <h5>Достижения:</h5>
           <p>- запуск и последующее ведение платформы;</p>
           <p>- разработка админской части приложения под требования заказчика;</p>
@@ -176,9 +181,9 @@
           <br />
 
           <h3>Dressmate</h3>
-          <h5>Ноябрь 2015 - Февраль 2017 </h5>
-
           <h4>Приложение для обмена женской одеждой для учащихся американских колледжей</h4>
+          <h4>Разработчик</h4>
+          <h5>Ноябрь 2015 - Февраль 2017 </h5>
           <h5>Функции:</h5>
           <p>- непосредственная разработка;</p>
           <p>- общение с англоговорящим заказчиком;</p>
