--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
           <h3>Simple Shop Scraper</h3>
           <h4>Агрегатор цен для Беларуси</h4>
-          <h4>Разработчик</h4>ы
+          <h4>Разработчик</h4>
           <h5>Июнь 2017 - Июль 2017</h5>
           <h5>Функции:</h5>
           <p>- разработка бекенд архитектуры для парсинга основных популярных белорусских сайтов, разработка фронтенд части;</p>
