--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 				<div class="span9">
 					<p class="welcome">
             <p>Я прошла целый путь в разработке от junior-разработчика до технического руководителя. Умею видеть ситуацию как со стороны исполнителя, так и со стороны бизнеса.</p>
-            <p>Осознаю, чем отличается небольшой сайт-визитка от высоко нагруженного веб-приложения с разбивкой на модули, более-менее сложной архитектурой, взаимодействием с сервером.</p>
-            <p>Имею опыт в бекенд-разработке и понимаю, как сложный бекенд работает с фронтенд частью. Целый семестр преподавала детям высшую математику в колледже, я могу найти подход к любой команде.</p>
-            <p>Работала в стартапе, знаю как делать быстро, круто и умею пресекать перфекционизм.</p>
+            <p>Осознаю, чем отличается небольшой сайт-визитка от высоко нагруженного веб-приложения сo сложной архитектурой.</p>
+            <p>Имею опыт в бекенд-разработке и понимаю, как сложный бекенд работает с фронтенд частью. Преподавала детям высшую математику в колледже, я могу найти подход к любой команде.</p>
+            <p>Работала в стартапах, знаю как делать быстро, круто и умею пресекать перфекционизм.</p>
           <br>
 					</p><p class="auth"> <i></i>  </p>
 				</div>
@@ -117,7 +117,7 @@
 
          <h5>Достижения:</h5>
          <p>- выстроила работу в отделе согласно принципам гибкой методологии, что позволило всегда преследовать актуальные цели бизнеса;</p>
-         <p>- обучала подчиненных, делилась опытом и наработанными практиками, что сформировало должные отношения в команде и принесло пользу в виде ее возрозшей производительности;</p>
+         <p>- обучала подчиненных, делилась опытом и наработанными практиками, что сформировало должные отношения в команде и принесло пользу в виде ее возроcшей производительности;</p>
          <br />
 
            <br />
@@ -181,7 +181,7 @@
           <br />
 
           <h3>Dressmate</h3>
-          <h4>Приложение для обмена женской одеждой для учащихся американских колледжей</h4>
+          <p>Приложение для обмена женской одеждой для учащихся американских колледжей</p>
           <h4>Разработчик</h4>
           <h5>Ноябрь 2015 - Февраль 2017 </h5>
           <h5>Функции:</h5>
