--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h3>IMBADOM</h3>
           <h4>Приложение для аренды недвижимости</h4>
           <h4>Технический руководитель (CTO)</h4>
-          <h5>Декабрь 2018 - Июнь 2019</h5>
+          <h5>Декабрь 2018 - Настоящее время</h5>
           <h5>Функции:</h5>
           <p>- ведение проекта, управление работой по проекту;</p>
           <p>- декомпозиция и планирование разработки;</p>
@@ -108,7 +108,7 @@
          <h4>Система внутреннего документооборота для РАО ЕЭС</h4>
          <h4>Ведущий программист</h4>
 
-         <h5>Июнь 2018 - Декабрь 2018</h5>
+         <h5>Апрель 2018 - Декабрь 2018</h5>
          <h5>Функции:</h5>
          <p>- рефакторинг проекта с использованием фреймворка React;</p>
          <p>- формирование команды, менторство и мотивация сотрудников;</p>
@@ -120,7 +120,7 @@
          <p>- обучала подчиненных, делилась опытом и наработанными практиками, что сформировало должные отношения в команде и принесло пользу в виде ее возроcшей производительности;</p>
          <br />
 
-           <br />
+           <!-- <br />
            <h3>А3</h3>
            <h4>Российская платежная система</h4>
            <h4>Разработчик</h4>
@@ -132,14 +132,14 @@
            <p>- формализация бизнес-требований партнеров проекта;</p>
            <h5>Достижения:</h5>
            <p>- построение системы для быстрого устранения замечаний клиентов и партнеров платежной системы;</p>
-           <br />
+           <br /> -->
 
            <br />
            <h3>GP-analytics</h3>
            <h4>Логистическое решение для пивоварен в США</h4>
            <h4>Разработчик</h4>
 
-           <h5>Июнь 2017 - Март 2018</h5>
+           <h5>Август 2017 - Апрель 2018</h5>
            <h5>Функции:</h5>
            <p>- переработка архитектуры проекта с использованием фреймворка Ember.js;</p>
            <p>- разработка мобильного приложения для сотрудников на React Native;</p>
@@ -152,9 +152,9 @@
            <br />
 
           <h3>Simple Shop Scraper</h3>
-          <h4>Агрегатор цен для Беларуси</h4>
+          <h4>Агрегатор цен для Беларуси. Собственный проект параллельно с основной работой</h4>
           <h4>Разработчик</h4>
-          <h5>Июнь 2017 - Июль 2017</h5>
+          <h5>Июнь 2017 - Август 2017</h5>
           <h5>Функции:</h5>
           <p>- разработка бекенд архитектуры для парсинга основных популярных белорусских сайтов, разработка фронтенд части;</p>
           <p>- подготовка документации, презентация проекта для инвесторов;</p>
